# team-project-25spring-2

./: .editorconfig  .gitignore  README.md  README.zh.md  backend_complexity.md  design-2.md  final-report-2.md  frontend_complexity.md
.cursor/: mcp.json
backend/: Dockerfile  PeachIDE.md  README.md  entrypoint.sh  pyproject.toml
backend/app/: db.py  main.py
backend/app/ai/: __init__.py
backend/app/auth/: __init__.py  middleware.py  utils.py
backend/app/coding/: __init__.py  api.py
backend/app/models/: assignment.py  bookmarklist.py  chat.py  code_snippet.py  comment.py  course.py  environment.py  file.py  group.py  material.py  note.py  schedule.py  section.py  user.py
backend/app/slide/: assignment.py  bookmarklist.py  code_snippet.py  comment.py  course.py  material.py  note.py  section.py  user.py
backend/app/slides/: assignment.py  bookmarklist.py  code_snippet.py  comment.py  course.py  file.py  group.py  material.py  note.py  section.py  user.py
backend/config/: backend-storage.yaml  backend.yaml  cluster-issuer.yaml  ingress.yaml  peach-tls.yaml  peachide.yaml  piston-service.yaml  postgres.yaml  practicum.yaml  traefik.yaml
backend/test/: conftest.py  test_api.py  test_auth.py  test_config.py  test_data_generation.py  test_environment_file.py
backend/test/test_group_environment/: README.md  dijkstra.py
backend/websocket/: Dockerfile  entrypoint.sh  package-lock.json  package.json  server.js  term.js
backend/websocket/data/: test.txt  test2.txt
docs/: design-2.md  report1-2.md
peachide/: Dockerfile  README-env.md  README.md  next.config.ts  package.json  (+3 more)
(+73 files in other folders)
