[project]
name = "peachide-backend"
version = "0.1.0"
description = "Backend for PeachIDE"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi-nextauth-jwt>=2.0.1",
    "fastapi[standard]>=0.115.11",
    "kubernetes>=32.0.1",
    "uvicorn[standard]>=0.34.0",
    "websockets>=15.0.1",
]
