[project]
name = "peachide-backend"
version = "0.1.0"
description = "Backend for PeachIDE"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi-nextauth-jwt>=2.0.1",
    "fastapi[standard]>=0.115.11",
    "kubernetes>=32.0.1",
    "sqlalchemy>=2.0.40",
    "uvicorn[standard]>=0.34.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.5",
]
