[project]
name = "peachide-backend"
version = "0.1.0"
description = "Backend for PeachIDE"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "kubernetes>=32.0.1",
    "psycopg2-binary>=2.9.10",
    "python-jose>=3.4.0",
    "sqlalchemy>=2.0.40",
    "uvicorn[standard]>=0.34.0",
    "websockets>=15.0.1",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "aiopyston>=1.2.1",
    "openai>=1.79.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.5",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest]
pythonpath = ["."]
